v1.4  增加userInfo
